# AstroOpenGL

./: CMakeLists.txt
src/: main.cpp
src/GameFramework/: AstroGame.cpp  AstroGame.h
src/Voxel/: Voxel.h
src/Window/: AWindow.cpp  AWindow.h
